@@ -1,7 +1,6 @@
 import java.util.ArrayList;
 import java.util.Iterator;
 import java.util.LinkedList;
-import java.util.List;
 
 
 public class Graph implements Iterable<Edge>{
@@ -13,9 +12,9 @@ public class Graph implements Iterable<Edge>{
 	private int edgeCardinality;
 
 	
-	ArrayList<LinkedList<Edge>> adjacency;
-	ArrayList<LinkedList<Arc>> inAdjacency;
-	ArrayList<LinkedList<Arc>> outAdjacency;
+	ArrayList<ArrayList<Edge>> adjacency;
+	ArrayList<ArrayList<Arc>> inAdjacency;
+	ArrayList<ArrayList<Arc>> outAdjacency;
 
     public int getOrder() {
         return order;
@@ -25,8 +24,8 @@ public class Graph implements Iterable<Edge>{
         return(adjacency.get(index) != null);
 	}
 	
-	public <T> ArrayList<LinkedList<T>> initialiseList(int size) {
-		ArrayList<LinkedList<T>> res = new ArrayList<>(size);
+	public <T> ArrayList<ArrayList<T>> initialiseList(int size) {
+		ArrayList<ArrayList<T>> res = new ArrayList<>(size);
 		for(int i = 0; i <= size; i++) {
 			res.add(null);
 		}
@@ -43,9 +42,9 @@ public class Graph implements Iterable<Edge>{
 	
 	public void addVertex(int indexVertex) {
 	    order++;
-	    adjacency.set(indexVertex, new LinkedList<Edge>());
-        inAdjacency.set(indexVertex, new LinkedList<Arc>());
-        outAdjacency.set(indexVertex, new LinkedList<Arc>());
+	    adjacency.set(indexVertex, new ArrayList<Edge>());
+        inAdjacency.set(indexVertex, new ArrayList<Arc>());
+        outAdjacency.set(indexVertex, new ArrayList<Arc>());
 	}
 	
 	public void ensureVertex(int indexVertex) {
@@ -71,8 +70,6 @@ public class Graph implements Iterable<Edge>{
         if(!isEdge(inversedEdge))
             adjacency.get(inversedEdge.source).add(inversedEdge);
 
-        addArc(new Arc(e,false));
-        addArc(new Arc(e, true));
 	}
 
     private boolean isEdge(Edge e) {
@@ -82,24 +79,36 @@ public class Graph implements Iterable<Edge>{
         return false;
     }
 
+    public ArrayList<Arc> outNeighbours(int sommet) {
+        return outAdjacency.get(sommet);
+
+    }
+
+
     public String toString(){
         StringBuilder result = new StringBuilder();
 
         Iterator<Edge> graphIterator = iterator();
         while(graphIterator.hasNext()){
             Edge edge = graphIterator.next();
-            result.append(edge.source).append(" => ").append(edge.dest).append("\n");
+            result.append(edge.source).append(" <=> ").append(edge.dest).append("\n");
         }
         return result.toString();
     }
     public String arcsAdjacencyToString(){
         StringBuilder result = new StringBuilder();
+        result.append("inAdjacency : \n");
+        for(ArrayList<Arc> arcs : inAdjacency)
+            if(arcs != null)
+                for(Arc arc : arcs)
+                    result.append(arc.getDest()).append(" <= ").append(arc.getSource()).append("\n");
 
-        Iterator<Edge> graphIterator = iterator();
-        while(graphIterator.hasNext()){
-            Edge edge = graphIterator.next();
-            result.append(edge.source).append(" => ").append(edge.dest).append("\n");
-        }
+        result.append("outAdjacency : \n");
+        for(ArrayList<Arc> arcs : outAdjacency)
+            if(arcs != null)
+                for(Arc arc : arcs)
+                    result.append(arc.toString());
+
         return result.toString();
     }
 
@@ -107,10 +116,6 @@ public class Graph implements Iterable<Edge>{
 	public Iterator<Edge> iterator() {
 		return new GraphIterator();
 	}
-
-    public Arc[] outNeighbours(int sommet) {
-        return null;
-    }
 
     private class GraphIterator/*<Edge>*/ implements Iterator<Edge> {
 	    int currentVertex = 0;
@@ -135,9 +140,9 @@ public class Graph implements Iterable<Edge>{
         public Edge next() {
             while(adjacency.get(currentVertex) == null)
                 currentVertex++;
-            if(adjacency.get(currentVertex).get(currentEdge) == adjacency.get(currentVertex).getLast()) {
+            if(currentEdge == adjacency.get(currentVertex).size() - 1) {
                 currentEdge = 0;
-                return adjacency.get(currentVertex++).getLast();
+                return adjacency.get(currentVertex++).get(adjacency.get(currentVertex-1).size() - 1);
             }
             return adjacency.get(currentVertex).get(currentEdge++);
         }
@@ -151,11 +156,7 @@ public class Graph implements Iterable<Edge>{
 
     public static void main(String argv[]){
         Graph graph = new Graph(20);
-        /*for(int i = 0; i < 3; i++){
-            for(int j = 3; j< 5; j++){
-                graph.addEdge(new Edge(i,j,5));
-            }
-        }*/
+
 
         graph.addEdge(new Edge(1,2,5));
         graph.addEdge(new Edge(2,3,6));
@@ -165,7 +166,7 @@ public class Graph implements Iterable<Edge>{
 
 
         System.out.println(graph.toString());
-
+        System.out.println(graph.arcsAdjacencyToString());
 
 
     }
